// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabOrdersList /> component renders correctly 1`] = `
<LabOrdersList
  dispatch={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "globalProperty": "labworkflowowa.testOrderType",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.labResultsEntryEncounterType",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.labResultsEncounterTypes",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.labResultsDateConcept",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.didNotPerformAnswer",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.didNotPerformQuestion",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.didNotPerformReason",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.testOrderNumberConcept",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.locationOfLaboratory",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.estimatedCollectionDateQuestion",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.estimatedCollectionDateAnswer",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "globalProperty": "labworkflowowa.dateAndTimeFormat",
            "type": "globalproperty/FETCH_REQUESTED",
          },
        ],
        Array [
          Object {
            "patientUUID": "",
            "type": "SET_SELECTED_PATIENT",
          },
        ],
        Array [
          Object {
            "type": "SET_CONCEPT",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  isLoading={false}
  labOrdersListFilters={
    Object {
      "dateField": "",
      "dateFromField": "2018-11-11T05:00:00.000Z",
      "dateToField": "2018-11-11T05:00:00.000Z",
      "testTypeField": "",
    }
  }
  labTests={
    Array [
      "Hémogramme automatisé",
    ]
  }
  location={Object {}}
  openmrs={
    Object {
      "CONSTANTS": Object {
        "dateAndTimeFormat": "DD-MMM-YYYY",
      },
    }
  }
  orders={
    Array [
      Object {
        "concept": Object {
          "display": "Hémogramme automatisé",
        },
        "dateActivated": "2018-08-30T17:34:19.000+0100",
        "labResult": Object {
          "encounter": Object {
            "encounterDatetime": "2018-08-30T17:34:19.000+0100",
          },
          "resultStatus": "Reported",
        },
        "orderNumber": "ORD-1",
        "patient": Object {
          "display": "Y2A7LR - williams willy john",
        },
        "urgency": "ROUTINE",
      },
    ]
  }
>
  <div
    className="main-container"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Labs"
        description="Welcome header on LabTestResult page"
        id="app.labOrdersList.title"
        values={Object {}}
      >
        <span>
          Labs
        </span>
      </FormattedMessage>
    </h2>
    <LabOrderListFilters
      clearNameEMRField={[Function]}
      dateFromField={"2018-11-11T05:00:00.000Z"}
      dateToField={"2018-11-11T05:00:00.000Z"}
      handleFieldChange={[Function]}
      labTests={
        Array [
          "Hémogramme automatisé",
        ]
      }
      nameField=""
      testTypeField=""
    >
      <div
        className="order-list-filters"
      >
        <span
          className="top-filters"
        >
          <span
            className="date-picker-filter"
          >
            <span>
              <CustomDatePicker
                defaultDate="2018-11-11"
                field="dateFromField"
                formControlStyle={
                  Object {
                    "marginRight": "5px",
                    "width": "110px",
                  }
                }
                handleDateChange={[Function]}
                label={
                  <FormattedMessage
                    defaultMessage="From: "
                    description="Label for the first date search input"
                    id="app.labOrdersListFilters.searchDateFromLabel"
                    values={Object {}}
                  />
                }
                labelClassName="line"
              >
                <div>
                  <t
                    allowSameDay={false}
                    customInput={
                      <DateDisplay
                        error={true}
                        formControlStyle={
                          Object {
                            "marginRight": "5px",
                            "width": "110px",
                          }
                        }
                        hasInput={false}
                        label={
                          <FormattedMessage
                            defaultMessage="From: "
                            description="Label for the first date search input"
                            id="app.labOrdersListFilters.searchDateFromLabel"
                            values={Object {}}
                          />
                        }
                        labelClassName="line"
                      />
                    }
                    dateFormat="dd MMM yyyy"
                    dateFormatCalendar="LLLL yyyy"
                    disabled={false}
                    disabledKeyboardNavigation={false}
                    dropdownMode="scroll"
                    excludeDates={
                      Array [
                        false,
                      ]
                    }
                    inlineFocusSelectedMonth={false}
                    monthsShown={1}
                    nextMonthButtonLabel="Next Month"
                    nextYearButtonLabel="Next Year"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClickOutside={[Function]}
                    onFocus={[Function]}
                    onInputClick={[Function]}
                    onInputError={[Function]}
                    onKeyDown={[Function]}
                    onMonthChange={[Function]}
                    onSelect={[Function]}
                    onYearChange={[Function]}
                    preventOpenOnFocus={false}
                    previousMonthButtonLabel="Previous Month"
                    previousYearButtonLabel="Previous Year"
                    readOnly={false}
                    renderDayContents={[Function]}
                    selected={2018-11-11T00:00:00.000Z}
                    shouldCloseOnSelect={true}
                    showMonthYearPicker={false}
                    showQuarterYearPicker={false}
                    showTimeInput={false}
                    showTimeSelect={false}
                    strictParsing={false}
                    timeCaption="Time"
                    timeInputLabel="Time"
                    timeIntervals={30}
                    withPortal={false}
                  >
                    <t
                      hidePopper={true}
                      popperComponent={null}
                      popperModifiers={
                        Object {
                          "preventOverflow": Object {
                            "boundariesElement": "viewport",
                            "enabled": true,
                            "escapeWithReference": true,
                          },
                        }
                      }
                      popperPlacement="bottom-start"
                      popperProps={Object {}}
                      targetComponent={
                        <div
                          className="react-datepicker__input-container"
                        >
                          <DateDisplay
                            className=""
                            disabled={false}
                            error={true}
                            formControlStyle={
                              Object {
                                "marginRight": "5px",
                                "width": "110px",
                              }
                            }
                            hasInput={false}
                            label={
                              <FormattedMessage
                                defaultMessage="From: "
                                description="Label for the first date search input"
                                id="app.labOrdersListFilters.searchDateFromLabel"
                                values={Object {}}
                              />
                            }
                            labelClassName="line"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            readOnly={false}
                            value="10 Nov 2018"
                          />
                        </div>
                      }
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <div
                              className="react-datepicker-wrapper"
                            >
                              <div
                                className="react-datepicker__input-container"
                              >
                                <DateDisplay
                                  className=""
                                  disabled={false}
                                  error={true}
                                  formControlStyle={
                                    Object {
                                      "marginRight": "5px",
                                      "width": "110px",
                                    }
                                  }
                                  hasInput={false}
                                  label={
                                    <FormattedMessage
                                      defaultMessage="From: "
                                      description="Label for the first date search input"
                                      id="app.labOrdersListFilters.searchDateFromLabel"
                                      values={Object {}}
                                    />
                                  }
                                  labelClassName="line"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  readOnly={false}
                                  value="10 Nov 2018"
                                >
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "display": "flex",
                                          "justifyContent": "space-around",
                                        }
                                      }
                                    >
                                      <span
                                        className="line"
                                      >
                                        <FormattedMessage
                                          defaultMessage="From: "
                                          description="Label for the first date search input"
                                          id="app.labOrdersListFilters.searchDateFromLabel"
                                          values={Object {}}
                                        >
                                          <span>
                                            From: 
                                          </span>
                                        </FormattedMessage>
                                      </span>
                                      <FormControl
                                        bsClass="form-control"
                                        componentClass="input"
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        placeholder=""
                                        style={
                                          Object {
                                            "marginRight": "5px",
                                            "width": "110px",
                                          }
                                        }
                                        type="text"
                                        value="10 Nov 2018"
                                      >
                                        <input
                                          className="form-control"
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          placeholder=""
                                          style={
                                            Object {
                                              "marginRight": "5px",
                                              "width": "110px",
                                            }
                                          }
                                          type="text"
                                          value="10 Nov 2018"
                                        />
                                      </FormControl>
                                      <FontAwesomeIcon
                                        border={false}
                                        className=""
                                        fixedWidth={false}
                                        flip={null}
                                        icon="calendar-alt"
                                        inverse={false}
                                        listItem={false}
                                        mask={null}
                                        onClick={[Function]}
                                        pull={null}
                                        pulse={false}
                                        rotation={null}
                                        size="2x"
                                        spin={false}
                                        symbol={false}
                                        title=""
                                        transform={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="svg-inline--fa fa-calendar-alt fa-w-14 fa-2x "
                                          data-icon="calendar-alt"
                                          data-prefix="fas"
                                          focusable="false"
                                          onClick={[Function]}
                                          role="img"
                                          style={Object {}}
                                          viewBox="0 0 448 512"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                                            fill="currentColor"
                                            style={Object {}}
                                          />
                                        </svg>
                                      </FontAwesomeIcon>
                                    </span>
                                  </span>
                                </DateDisplay>
                              </div>
                            </div>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </t>
                  </t>
                </div>
              </CustomDatePicker>
            </span>
            <span>
              <CustomDatePicker
                defaultDate="2018-11-11"
                field="dateToField"
                formControlStyle={
                  Object {
                    "marginRight": "5px",
                    "width": "110px",
                  }
                }
                handleDateChange={[Function]}
                label={
                  <FormattedMessage
                    defaultMessage="To: "
                    description="Label for the second date search input"
                    id="app.labOrdersListFilters.searchDateToLabel"
                    values={Object {}}
                  />
                }
                labelClassName="line"
              >
                <div>
                  <t
                    allowSameDay={false}
                    customInput={
                      <DateDisplay
                        error={true}
                        formControlStyle={
                          Object {
                            "marginRight": "5px",
                            "width": "110px",
                          }
                        }
                        hasInput={false}
                        label={
                          <FormattedMessage
                            defaultMessage="To: "
                            description="Label for the second date search input"
                            id="app.labOrdersListFilters.searchDateToLabel"
                            values={Object {}}
                          />
                        }
                        labelClassName="line"
                      />
                    }
                    dateFormat="dd MMM yyyy"
                    dateFormatCalendar="LLLL yyyy"
                    disabled={false}
                    disabledKeyboardNavigation={false}
                    dropdownMode="scroll"
                    excludeDates={
                      Array [
                        false,
                      ]
                    }
                    inlineFocusSelectedMonth={false}
                    monthsShown={1}
                    nextMonthButtonLabel="Next Month"
                    nextYearButtonLabel="Next Year"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClickOutside={[Function]}
                    onFocus={[Function]}
                    onInputClick={[Function]}
                    onInputError={[Function]}
                    onKeyDown={[Function]}
                    onMonthChange={[Function]}
                    onSelect={[Function]}
                    onYearChange={[Function]}
                    preventOpenOnFocus={false}
                    previousMonthButtonLabel="Previous Month"
                    previousYearButtonLabel="Previous Year"
                    readOnly={false}
                    renderDayContents={[Function]}
                    selected={2018-11-11T00:00:00.000Z}
                    shouldCloseOnSelect={true}
                    showMonthYearPicker={false}
                    showQuarterYearPicker={false}
                    showTimeInput={false}
                    showTimeSelect={false}
                    strictParsing={false}
                    timeCaption="Time"
                    timeInputLabel="Time"
                    timeIntervals={30}
                    withPortal={false}
                  >
                    <t
                      hidePopper={true}
                      popperComponent={null}
                      popperModifiers={
                        Object {
                          "preventOverflow": Object {
                            "boundariesElement": "viewport",
                            "enabled": true,
                            "escapeWithReference": true,
                          },
                        }
                      }
                      popperPlacement="bottom-start"
                      popperProps={Object {}}
                      targetComponent={
                        <div
                          className="react-datepicker__input-container"
                        >
                          <DateDisplay
                            className=""
                            disabled={false}
                            error={true}
                            formControlStyle={
                              Object {
                                "marginRight": "5px",
                                "width": "110px",
                              }
                            }
                            hasInput={false}
                            label={
                              <FormattedMessage
                                defaultMessage="To: "
                                description="Label for the second date search input"
                                id="app.labOrdersListFilters.searchDateToLabel"
                                values={Object {}}
                              />
                            }
                            labelClassName="line"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            readOnly={false}
                            value="10 Nov 2018"
                          />
                        </div>
                      }
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <div
                              className="react-datepicker-wrapper"
                            >
                              <div
                                className="react-datepicker__input-container"
                              >
                                <DateDisplay
                                  className=""
                                  disabled={false}
                                  error={true}
                                  formControlStyle={
                                    Object {
                                      "marginRight": "5px",
                                      "width": "110px",
                                    }
                                  }
                                  hasInput={false}
                                  label={
                                    <FormattedMessage
                                      defaultMessage="To: "
                                      description="Label for the second date search input"
                                      id="app.labOrdersListFilters.searchDateToLabel"
                                      values={Object {}}
                                    />
                                  }
                                  labelClassName="line"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  readOnly={false}
                                  value="10 Nov 2018"
                                >
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "display": "flex",
                                          "justifyContent": "space-around",
                                        }
                                      }
                                    >
                                      <span
                                        className="line"
                                      >
                                        <FormattedMessage
                                          defaultMessage="To: "
                                          description="Label for the second date search input"
                                          id="app.labOrdersListFilters.searchDateToLabel"
                                          values={Object {}}
                                        >
                                          <span>
                                            To: 
                                          </span>
                                        </FormattedMessage>
                                      </span>
                                      <FormControl
                                        bsClass="form-control"
                                        componentClass="input"
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        placeholder=""
                                        style={
                                          Object {
                                            "marginRight": "5px",
                                            "width": "110px",
                                          }
                                        }
                                        type="text"
                                        value="10 Nov 2018"
                                      >
                                        <input
                                          className="form-control"
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          placeholder=""
                                          style={
                                            Object {
                                              "marginRight": "5px",
                                              "width": "110px",
                                            }
                                          }
                                          type="text"
                                          value="10 Nov 2018"
                                        />
                                      </FormControl>
                                      <FontAwesomeIcon
                                        border={false}
                                        className=""
                                        fixedWidth={false}
                                        flip={null}
                                        icon="calendar-alt"
                                        inverse={false}
                                        listItem={false}
                                        mask={null}
                                        onClick={[Function]}
                                        pull={null}
                                        pulse={false}
                                        rotation={null}
                                        size="2x"
                                        spin={false}
                                        symbol={false}
                                        title=""
                                        transform={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="svg-inline--fa fa-calendar-alt fa-w-14 fa-2x "
                                          data-icon="calendar-alt"
                                          data-prefix="fas"
                                          focusable="false"
                                          onClick={[Function]}
                                          role="img"
                                          style={Object {}}
                                          viewBox="0 0 448 512"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                                            fill="currentColor"
                                            style={Object {}}
                                          />
                                        </svg>
                                      </FontAwesomeIcon>
                                    </span>
                                  </span>
                                </DateDisplay>
                              </div>
                            </div>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </t>
                  </t>
                </div>
              </CustomDatePicker>
            </span>
          </span>
        </span>
        <span
          className="bottom-filters"
        >
          <span
            className="form-filter-group one-third"
          >
            <FormattedMessage
              defaultMessage="Search for a sample"
              description="Label for text search input"
              id="app.labOrdersListFilters.textSearchTitle"
              values={Object {}}
            >
              <span>
                Search for a sample
              </span>
            </FormattedMessage>
            <span
              className="name-emrid-order-filter"
            >
              <i
                className="small icon-search"
              />
              <FormControl
                autoFocus={true}
                bsClass="form-control"
                componentClass="input"
                id="emr-name-search"
                onChange={[Function]}
                placeholder="search by ID or name, or scan sample"
                type="text"
                value=""
              >
                <input
                  autoFocus={true}
                  className="form-control"
                  id="emr-name-search"
                  onChange={[Function]}
                  placeholder="search by ID or name, or scan sample"
                  type="text"
                  value=""
                />
              </FormControl>
              <i
                className="small scale icon-remove-sign"
                onClick={[Function]}
                role="toolbar"
              />
            </span>
          </span>
          <span
            className="status-dropdown"
          >
            <Dropdown
              className="form-filter-group"
              defaultValue="All"
              field="testStatusField"
              handleSelect={[Function]}
              id="test-status-dropdown"
              input={
                Object {
                  "value": undefined,
                }
              }
              label={
                <FormattedMessage
                  defaultMessage="Status"
                  description="Label for the test status dropdown"
                  id="app.labOrdersListFilters.statusDropdownLabel"
                  values={Object {}}
                />
              }
              labelClassName=""
              list={
                Array [
                  "Ordered",
                  "Reported",
                  "Taken",
                  "Cancelled/Expired",
                ]
              }
              placeholder={
                <LocalizedMessage
                  defaultMessage="Select from the list"
                  id="reactcomponents.select.from.list"
                />
              }
            >
              <div>
                <span
                  className="form-filter-group"
                >
                  <span
                    className=""
                  >
                    <FormattedMessage
                      defaultMessage="Status"
                      description="Label for the test status dropdown"
                      id="app.labOrdersListFilters.statusDropdownLabel"
                      values={Object {}}
                    >
                      <span>
                        Status
                      </span>
                    </FormattedMessage>
                  </span>
                  <select
                    disabled={false}
                    id="test-status-dropdown"
                    onChange={[Function]}
                    style={
                      Object {
                        "height": "45px",
                        "width": "100%",
                      }
                    }
                  >
                    <option
                      key="0"
                      value=""
                    >
                      <LocalizedMessage
                        defaultMessage="Select from the list"
                        id="reactcomponents.select.from.list"
                      >
                        <span>
                          Select from the list
                        </span>
                      </LocalizedMessage>
                    </option>
                    <option
                      key="All"
                      value="All"
                    >
                      All
                    </option>
                    <option
                      key="Ordered"
                      value="Ordered"
                    >
                      Ordered
                    </option>
                    <option
                      key="Reported"
                      value="Reported"
                    >
                      Reported
                    </option>
                    <option
                      key="Taken"
                      value="Taken"
                    >
                      Taken
                    </option>
                    <option
                      key="Cancelled/Expired"
                      value="Cancelled/Expired"
                    >
                      Cancelled/Expired
                    </option>
                  </select>
                </span>
              </div>
            </Dropdown>
          </span>
          <span
            className="type-dropdown"
          >
            <Dropdown
              className="form-filter-group"
              defaultValue="All"
              field="testTypeField"
              handleSelect={[Function]}
              id="test-type-dropdown"
              input={
                Object {
                  "value": "",
                }
              }
              label={
                <FormattedMessage
                  defaultMessage="Test Type"
                  description="Label for the test type dropdown"
                  id="app.labOrdersListFilters.searchDropdownLabel"
                  values={Object {}}
                />
              }
              labelClassName=""
              list={
                Array [
                  "Hémogramme automatisé",
                ]
              }
              placeholder={
                <LocalizedMessage
                  defaultMessage="Select from the list"
                  id="reactcomponents.select.from.list"
                />
              }
            >
              <div>
                <span
                  className="form-filter-group"
                >
                  <span
                    className=""
                  >
                    <FormattedMessage
                      defaultMessage="Test Type"
                      description="Label for the test type dropdown"
                      id="app.labOrdersListFilters.searchDropdownLabel"
                      values={Object {}}
                    >
                      <span>
                        Test Type
                      </span>
                    </FormattedMessage>
                  </span>
                  <select
                    disabled={false}
                    id="test-type-dropdown"
                    onChange={[Function]}
                    style={
                      Object {
                        "height": "45px",
                        "width": "100%",
                      }
                    }
                  >
                    <option
                      key="0"
                      value=""
                    >
                      <LocalizedMessage
                        defaultMessage="Select from the list"
                        id="reactcomponents.select.from.list"
                      >
                        <span>
                          Select from the list
                        </span>
                      </LocalizedMessage>
                    </option>
                    <option
                      key="All"
                      value="All"
                    >
                      All
                    </option>
                    <option
                      key="Hémogramme automatisé"
                      value="Hémogramme automatisé"
                    >
                      Hémogramme automatisé
                    </option>
                  </select>
                </span>
              </div>
            </Dropdown>
          </span>
        </span>
      </div>
    </LabOrderListFilters>
    <Loader>
      <div
        className="custom-loader"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
    </Loader>
  </div>
</LabOrdersList>
`;

exports[`LabOrdersListContainer container <Cell /> component returns EMR ID section 1`] = `
<_Cell
  columnName="EMR ID"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  value={
    Object {
      "patient": Object {
        "display": "Y2A7LR - williams willy john",
      },
    }
  }
>
  <div
    className="table_cell emr-id"
  >
    <span>
      Y2A7LR
    </span>
  </div>
</_Cell>
`;

exports[`LabOrdersListContainer container <Cell /> component returns NAME column 1`] = `
<_Cell
  columnName="NAME"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  value={
    Object {
      "patient": Object {
        "display": "Y2A7LR - williams willy john",
      },
    }
  }
>
  <div
    className="table_cell name"
  >
    <span>
      williams willy john
    </span>
  </div>
</_Cell>
`;

exports[`LabOrdersListContainer container <Cell /> component returns ORDER DATE column 1`] = `
<_Cell
  columnName="ORDER DATE"
  dateAndTimeFormat="DD-MMM-YYYY HH:mm"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  value={
    Object {
      "concept": Object {
        "display": "Hémogramme automatisé",
      },
      "dateActivated": "2018-08-30T17:34:19.000+0100",
      "orderNumber": "ORD-1",
      "patient": Object {
        "display": "Y2A7LR - williams willy john",
      },
      "urgency": "ROUTINE",
    }
  }
>
  <div
    className="table_cell order-date"
  >
    <span>
      30-Aug-2018
    </span>
  </div>
</_Cell>
`;

exports[`LabOrdersListContainer container <Cell /> component returns ORDER ID column 1`] = `
<_Cell
  columnName="ORDER ID"
  dateAndTimeFormat="DD-MMM-YYYY HH:mm"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  value={
    Object {
      "concept": Object {
        "display": "Hémogramme automatisé",
      },
      "dateActivated": "2018-08-30T17:34:19.000+0100",
      "orderNumber": "ORD-1",
      "patient": Object {
        "display": "Y2A7LR - williams willy john",
      },
      "urgency": "ROUTINE",
    }
  }
>
  <div
    className="table_cell order-id"
  >
    <span>
      ORD-1
    </span>
  </div>
</_Cell>
`;

exports[`LabOrdersListContainer container <Cell /> component returns TEST TYPE column 1`] = `
<_Cell
  columnName="TEST TYPE"
  dateAndTimeFormat="DD-MMM-YYYY HH:mm"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  value={
    Object {
      "concept": Object {
        "display": "Hémogramme automatisé",
      },
      "dateActivated": "2018-08-30T17:34:19.000+0100",
      "orderNumber": "ORD-1",
      "patient": Object {
        "display": "Y2A7LR - williams willy john",
      },
      "urgency": "ROUTINE",
    }
  }
>
  <div
    className="table_cell test-type"
  >
    <span>
      Hémogramme automatisé
    </span>
  </div>
</_Cell>
`;

exports[`LabOrdersListContainer container <Cell /> component returns null when no column name is matched 1`] = `
<_Cell
  columnName="SOME RIDICULOUS COLUMN"
  dateAndTimeFormat="DD-MMM-YYYY HH:mm"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  value={
    Object {
      "concept": Object {
        "display": "Hémogramme automatisé",
      },
      "dateActivated": "2018-08-30T17:34:19.000+0100",
      "orderNumber": "ORD-1",
      "patient": Object {
        "display": "Y2A7LR - williams willy john",
      },
      "urgency": "ROUTINE",
    }
  }
/>
`;

exports[`LabOrdersListContainer container should pass required props from state to <LabOrdersList /> component 1`] = `
<LabOrdersList
  dispatch={[MockFunction]}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  isLoading={false}
  labOrdersListFilters={
    Object {
      "dateField": "",
      "dateFromField": "2018-11-11T05:00:00.000Z",
      "dateToField": "2018-11-11T05:00:00.000Z",
      "testTypeField": "",
    }
  }
  labTests={
    Array [
      "Hémogramme automatisé",
    ]
  }
  location={Object {}}
  openmrs={
    Object {
      "CONSTANTS": Object {
        "dateAndTimeFormat": "DD-MMM-YYYY",
      },
    }
  }
  orders={
    Array [
      Object {
        "concept": Object {
          "display": "Hémogramme automatisé",
        },
        "dateActivated": "2018-08-30T17:34:19.000+0100",
        "labResult": Object {
          "encounter": Object {
            "encounterDatetime": "2018-08-30T17:34:19.000+0100",
          },
          "resultStatus": "Reported",
        },
        "orderNumber": "ORD-1",
        "patient": Object {
          "display": "Y2A7LR - williams willy john",
        },
        "urgency": "ROUTINE",
      },
    ]
  }
>
  <div
    className="main-container"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Labs"
        description="Welcome header on LabTestResult page"
        id="app.labOrdersList.title"
        values={Object {}}
      >
        <span>
          Labs
        </span>
      </FormattedMessage>
    </h2>
    <LabOrderListFilters
      clearNameEMRField={[Function]}
      dateFromField={"2018-11-11T05:00:00.000Z"}
      dateToField={"2018-11-11T05:00:00.000Z"}
      handleFieldChange={[Function]}
      labTests={
        Array [
          "Hémogramme automatisé",
        ]
      }
      nameField=""
      testTypeField=""
    >
      <div
        className="order-list-filters"
      >
        <span
          className="top-filters"
        >
          <span
            className="date-picker-filter"
          >
            <span>
              <CustomDatePicker
                defaultDate="2018-11-11"
                field="dateFromField"
                formControlStyle={
                  Object {
                    "marginRight": "5px",
                    "width": "110px",
                  }
                }
                handleDateChange={[Function]}
                label={
                  <FormattedMessage
                    defaultMessage="From: "
                    description="Label for the first date search input"
                    id="app.labOrdersListFilters.searchDateFromLabel"
                    values={Object {}}
                  />
                }
                labelClassName="line"
              >
                <div>
                  <t
                    allowSameDay={false}
                    customInput={
                      <DateDisplay
                        error={true}
                        formControlStyle={
                          Object {
                            "marginRight": "5px",
                            "width": "110px",
                          }
                        }
                        hasInput={false}
                        label={
                          <FormattedMessage
                            defaultMessage="From: "
                            description="Label for the first date search input"
                            id="app.labOrdersListFilters.searchDateFromLabel"
                            values={Object {}}
                          />
                        }
                        labelClassName="line"
                      />
                    }
                    dateFormat="dd MMM yyyy"
                    dateFormatCalendar="LLLL yyyy"
                    disabled={false}
                    disabledKeyboardNavigation={false}
                    dropdownMode="scroll"
                    excludeDates={
                      Array [
                        false,
                      ]
                    }
                    inlineFocusSelectedMonth={false}
                    monthsShown={1}
                    nextMonthButtonLabel="Next Month"
                    nextYearButtonLabel="Next Year"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClickOutside={[Function]}
                    onFocus={[Function]}
                    onInputClick={[Function]}
                    onInputError={[Function]}
                    onKeyDown={[Function]}
                    onMonthChange={[Function]}
                    onSelect={[Function]}
                    onYearChange={[Function]}
                    preventOpenOnFocus={false}
                    previousMonthButtonLabel="Previous Month"
                    previousYearButtonLabel="Previous Year"
                    readOnly={false}
                    renderDayContents={[Function]}
                    selected={2018-11-11T00:00:00.000Z}
                    shouldCloseOnSelect={true}
                    showMonthYearPicker={false}
                    showQuarterYearPicker={false}
                    showTimeInput={false}
                    showTimeSelect={false}
                    strictParsing={false}
                    timeCaption="Time"
                    timeInputLabel="Time"
                    timeIntervals={30}
                    withPortal={false}
                  >
                    <t
                      hidePopper={true}
                      popperComponent={null}
                      popperModifiers={
                        Object {
                          "preventOverflow": Object {
                            "boundariesElement": "viewport",
                            "enabled": true,
                            "escapeWithReference": true,
                          },
                        }
                      }
                      popperPlacement="bottom-start"
                      popperProps={Object {}}
                      targetComponent={
                        <div
                          className="react-datepicker__input-container"
                        >
                          <DateDisplay
                            className=""
                            disabled={false}
                            error={true}
                            formControlStyle={
                              Object {
                                "marginRight": "5px",
                                "width": "110px",
                              }
                            }
                            hasInput={false}
                            label={
                              <FormattedMessage
                                defaultMessage="From: "
                                description="Label for the first date search input"
                                id="app.labOrdersListFilters.searchDateFromLabel"
                                values={Object {}}
                              />
                            }
                            labelClassName="line"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            readOnly={false}
                            value="10 Nov 2018"
                          />
                        </div>
                      }
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <div
                              className="react-datepicker-wrapper"
                            >
                              <div
                                className="react-datepicker__input-container"
                              >
                                <DateDisplay
                                  className=""
                                  disabled={false}
                                  error={true}
                                  formControlStyle={
                                    Object {
                                      "marginRight": "5px",
                                      "width": "110px",
                                    }
                                  }
                                  hasInput={false}
                                  label={
                                    <FormattedMessage
                                      defaultMessage="From: "
                                      description="Label for the first date search input"
                                      id="app.labOrdersListFilters.searchDateFromLabel"
                                      values={Object {}}
                                    />
                                  }
                                  labelClassName="line"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  readOnly={false}
                                  value="10 Nov 2018"
                                >
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "display": "flex",
                                          "justifyContent": "space-around",
                                        }
                                      }
                                    >
                                      <span
                                        className="line"
                                      >
                                        <FormattedMessage
                                          defaultMessage="From: "
                                          description="Label for the first date search input"
                                          id="app.labOrdersListFilters.searchDateFromLabel"
                                          values={Object {}}
                                        >
                                          <span>
                                            From: 
                                          </span>
                                        </FormattedMessage>
                                      </span>
                                      <FormControl
                                        bsClass="form-control"
                                        componentClass="input"
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        placeholder=""
                                        style={
                                          Object {
                                            "marginRight": "5px",
                                            "width": "110px",
                                          }
                                        }
                                        type="text"
                                        value="10 Nov 2018"
                                      >
                                        <input
                                          className="form-control"
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          placeholder=""
                                          style={
                                            Object {
                                              "marginRight": "5px",
                                              "width": "110px",
                                            }
                                          }
                                          type="text"
                                          value="10 Nov 2018"
                                        />
                                      </FormControl>
                                      <FontAwesomeIcon
                                        border={false}
                                        className=""
                                        fixedWidth={false}
                                        flip={null}
                                        icon="calendar-alt"
                                        inverse={false}
                                        listItem={false}
                                        mask={null}
                                        onClick={[Function]}
                                        pull={null}
                                        pulse={false}
                                        rotation={null}
                                        size="2x"
                                        spin={false}
                                        symbol={false}
                                        title=""
                                        transform={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="svg-inline--fa fa-calendar-alt fa-w-14 fa-2x "
                                          data-icon="calendar-alt"
                                          data-prefix="fas"
                                          focusable="false"
                                          onClick={[Function]}
                                          role="img"
                                          style={Object {}}
                                          viewBox="0 0 448 512"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                                            fill="currentColor"
                                            style={Object {}}
                                          />
                                        </svg>
                                      </FontAwesomeIcon>
                                    </span>
                                  </span>
                                </DateDisplay>
                              </div>
                            </div>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </t>
                  </t>
                </div>
              </CustomDatePicker>
            </span>
            <span>
              <CustomDatePicker
                defaultDate="2018-11-11"
                field="dateToField"
                formControlStyle={
                  Object {
                    "marginRight": "5px",
                    "width": "110px",
                  }
                }
                handleDateChange={[Function]}
                label={
                  <FormattedMessage
                    defaultMessage="To: "
                    description="Label for the second date search input"
                    id="app.labOrdersListFilters.searchDateToLabel"
                    values={Object {}}
                  />
                }
                labelClassName="line"
              >
                <div>
                  <t
                    allowSameDay={false}
                    customInput={
                      <DateDisplay
                        error={true}
                        formControlStyle={
                          Object {
                            "marginRight": "5px",
                            "width": "110px",
                          }
                        }
                        hasInput={false}
                        label={
                          <FormattedMessage
                            defaultMessage="To: "
                            description="Label for the second date search input"
                            id="app.labOrdersListFilters.searchDateToLabel"
                            values={Object {}}
                          />
                        }
                        labelClassName="line"
                      />
                    }
                    dateFormat="dd MMM yyyy"
                    dateFormatCalendar="LLLL yyyy"
                    disabled={false}
                    disabledKeyboardNavigation={false}
                    dropdownMode="scroll"
                    excludeDates={
                      Array [
                        false,
                      ]
                    }
                    inlineFocusSelectedMonth={false}
                    monthsShown={1}
                    nextMonthButtonLabel="Next Month"
                    nextYearButtonLabel="Next Year"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClickOutside={[Function]}
                    onFocus={[Function]}
                    onInputClick={[Function]}
                    onInputError={[Function]}
                    onKeyDown={[Function]}
                    onMonthChange={[Function]}
                    onSelect={[Function]}
                    onYearChange={[Function]}
                    preventOpenOnFocus={false}
                    previousMonthButtonLabel="Previous Month"
                    previousYearButtonLabel="Previous Year"
                    readOnly={false}
                    renderDayContents={[Function]}
                    selected={2018-11-11T00:00:00.000Z}
                    shouldCloseOnSelect={true}
                    showMonthYearPicker={false}
                    showQuarterYearPicker={false}
                    showTimeInput={false}
                    showTimeSelect={false}
                    strictParsing={false}
                    timeCaption="Time"
                    timeInputLabel="Time"
                    timeIntervals={30}
                    withPortal={false}
                  >
                    <t
                      hidePopper={true}
                      popperComponent={null}
                      popperModifiers={
                        Object {
                          "preventOverflow": Object {
                            "boundariesElement": "viewport",
                            "enabled": true,
                            "escapeWithReference": true,
                          },
                        }
                      }
                      popperPlacement="bottom-start"
                      popperProps={Object {}}
                      targetComponent={
                        <div
                          className="react-datepicker__input-container"
                        >
                          <DateDisplay
                            className=""
                            disabled={false}
                            error={true}
                            formControlStyle={
                              Object {
                                "marginRight": "5px",
                                "width": "110px",
                              }
                            }
                            hasInput={false}
                            label={
                              <FormattedMessage
                                defaultMessage="To: "
                                description="Label for the second date search input"
                                id="app.labOrdersListFilters.searchDateToLabel"
                                values={Object {}}
                              />
                            }
                            labelClassName="line"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            readOnly={false}
                            value="10 Nov 2018"
                          />
                        </div>
                      }
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <div
                              className="react-datepicker-wrapper"
                            >
                              <div
                                className="react-datepicker__input-container"
                              >
                                <DateDisplay
                                  className=""
                                  disabled={false}
                                  error={true}
                                  formControlStyle={
                                    Object {
                                      "marginRight": "5px",
                                      "width": "110px",
                                    }
                                  }
                                  hasInput={false}
                                  label={
                                    <FormattedMessage
                                      defaultMessage="To: "
                                      description="Label for the second date search input"
                                      id="app.labOrdersListFilters.searchDateToLabel"
                                      values={Object {}}
                                    />
                                  }
                                  labelClassName="line"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  readOnly={false}
                                  value="10 Nov 2018"
                                >
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "display": "flex",
                                          "justifyContent": "space-around",
                                        }
                                      }
                                    >
                                      <span
                                        className="line"
                                      >
                                        <FormattedMessage
                                          defaultMessage="To: "
                                          description="Label for the second date search input"
                                          id="app.labOrdersListFilters.searchDateToLabel"
                                          values={Object {}}
                                        >
                                          <span>
                                            To: 
                                          </span>
                                        </FormattedMessage>
                                      </span>
                                      <FormControl
                                        bsClass="form-control"
                                        componentClass="input"
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        placeholder=""
                                        style={
                                          Object {
                                            "marginRight": "5px",
                                            "width": "110px",
                                          }
                                        }
                                        type="text"
                                        value="10 Nov 2018"
                                      >
                                        <input
                                          className="form-control"
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          placeholder=""
                                          style={
                                            Object {
                                              "marginRight": "5px",
                                              "width": "110px",
                                            }
                                          }
                                          type="text"
                                          value="10 Nov 2018"
                                        />
                                      </FormControl>
                                      <FontAwesomeIcon
                                        border={false}
                                        className=""
                                        fixedWidth={false}
                                        flip={null}
                                        icon="calendar-alt"
                                        inverse={false}
                                        listItem={false}
                                        mask={null}
                                        onClick={[Function]}
                                        pull={null}
                                        pulse={false}
                                        rotation={null}
                                        size="2x"
                                        spin={false}
                                        symbol={false}
                                        title=""
                                        transform={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="svg-inline--fa fa-calendar-alt fa-w-14 fa-2x "
                                          data-icon="calendar-alt"
                                          data-prefix="fas"
                                          focusable="false"
                                          onClick={[Function]}
                                          role="img"
                                          style={Object {}}
                                          viewBox="0 0 448 512"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                                            fill="currentColor"
                                            style={Object {}}
                                          />
                                        </svg>
                                      </FontAwesomeIcon>
                                    </span>
                                  </span>
                                </DateDisplay>
                              </div>
                            </div>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </t>
                  </t>
                </div>
              </CustomDatePicker>
            </span>
          </span>
        </span>
        <span
          className="bottom-filters"
        >
          <span
            className="form-filter-group one-third"
          >
            <FormattedMessage
              defaultMessage="Search for a sample"
              description="Label for text search input"
              id="app.labOrdersListFilters.textSearchTitle"
              values={Object {}}
            >
              <span>
                Search for a sample
              </span>
            </FormattedMessage>
            <span
              className="name-emrid-order-filter"
            >
              <i
                className="small icon-search"
              />
              <FormControl
                autoFocus={true}
                bsClass="form-control"
                componentClass="input"
                id="emr-name-search"
                onChange={[Function]}
                placeholder="search by ID or name, or scan sample"
                type="text"
                value=""
              >
                <input
                  autoFocus={true}
                  className="form-control"
                  id="emr-name-search"
                  onChange={[Function]}
                  placeholder="search by ID or name, or scan sample"
                  type="text"
                  value=""
                />
              </FormControl>
              <i
                className="small scale icon-remove-sign"
                onClick={[Function]}
                role="toolbar"
              />
            </span>
          </span>
          <span
            className="status-dropdown"
          >
            <Dropdown
              className="form-filter-group"
              defaultValue="All"
              field="testStatusField"
              handleSelect={[Function]}
              id="test-status-dropdown"
              input={
                Object {
                  "value": undefined,
                }
              }
              label={
                <FormattedMessage
                  defaultMessage="Status"
                  description="Label for the test status dropdown"
                  id="app.labOrdersListFilters.statusDropdownLabel"
                  values={Object {}}
                />
              }
              labelClassName=""
              list={
                Array [
                  "Ordered",
                  "Reported",
                  "Taken",
                  "Cancelled/Expired",
                ]
              }
              placeholder={
                <LocalizedMessage
                  defaultMessage="Select from the list"
                  id="reactcomponents.select.from.list"
                />
              }
            >
              <div>
                <span
                  className="form-filter-group"
                >
                  <span
                    className=""
                  >
                    <FormattedMessage
                      defaultMessage="Status"
                      description="Label for the test status dropdown"
                      id="app.labOrdersListFilters.statusDropdownLabel"
                      values={Object {}}
                    >
                      <span>
                        Status
                      </span>
                    </FormattedMessage>
                  </span>
                  <select
                    disabled={false}
                    id="test-status-dropdown"
                    onChange={[Function]}
                    style={
                      Object {
                        "height": "45px",
                        "width": "100%",
                      }
                    }
                  >
                    <option
                      key="0"
                      value=""
                    >
                      <LocalizedMessage
                        defaultMessage="Select from the list"
                        id="reactcomponents.select.from.list"
                      >
                        <span>
                          Select from the list
                        </span>
                      </LocalizedMessage>
                    </option>
                    <option
                      key="All"
                      value="All"
                    >
                      All
                    </option>
                    <option
                      key="Ordered"
                      value="Ordered"
                    >
                      Ordered
                    </option>
                    <option
                      key="Reported"
                      value="Reported"
                    >
                      Reported
                    </option>
                    <option
                      key="Taken"
                      value="Taken"
                    >
                      Taken
                    </option>
                    <option
                      key="Cancelled/Expired"
                      value="Cancelled/Expired"
                    >
                      Cancelled/Expired
                    </option>
                  </select>
                </span>
              </div>
            </Dropdown>
          </span>
          <span
            className="type-dropdown"
          >
            <Dropdown
              className="form-filter-group"
              defaultValue="All"
              field="testTypeField"
              handleSelect={[Function]}
              id="test-type-dropdown"
              input={
                Object {
                  "value": "",
                }
              }
              label={
                <FormattedMessage
                  defaultMessage="Test Type"
                  description="Label for the test type dropdown"
                  id="app.labOrdersListFilters.searchDropdownLabel"
                  values={Object {}}
                />
              }
              labelClassName=""
              list={
                Array [
                  "Hémogramme automatisé",
                ]
              }
              placeholder={
                <LocalizedMessage
                  defaultMessage="Select from the list"
                  id="reactcomponents.select.from.list"
                />
              }
            >
              <div>
                <span
                  className="form-filter-group"
                >
                  <span
                    className=""
                  >
                    <FormattedMessage
                      defaultMessage="Test Type"
                      description="Label for the test type dropdown"
                      id="app.labOrdersListFilters.searchDropdownLabel"
                      values={Object {}}
                    >
                      <span>
                        Test Type
                      </span>
                    </FormattedMessage>
                  </span>
                  <select
                    disabled={false}
                    id="test-type-dropdown"
                    onChange={[Function]}
                    style={
                      Object {
                        "height": "45px",
                        "width": "100%",
                      }
                    }
                  >
                    <option
                      key="0"
                      value=""
                    >
                      <LocalizedMessage
                        defaultMessage="Select from the list"
                        id="reactcomponents.select.from.list"
                      >
                        <span>
                          Select from the list
                        </span>
                      </LocalizedMessage>
                    </option>
                    <option
                      key="All"
                      value="All"
                    >
                      All
                    </option>
                    <option
                      key="Hémogramme automatisé"
                      value="Hémogramme automatisé"
                    >
                      Hémogramme automatisé
                    </option>
                  </select>
                </span>
              </div>
            </Dropdown>
          </span>
        </span>
      </div>
    </LabOrderListFilters>
    <Loader>
      <div
        className="custom-loader"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
    </Loader>
  </div>
</LabOrdersList>
`;
